--- a/index.html
+++ b/index.html
@@ -9,17 +9,12 @@
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
-    window.onload = function() {
-      let reloadCount = sessionStorage.getItem('reloadCount');
-
-      if (!reloadCount) {
-        reloadCount = 0;
-      }
-
-      reloadCount = Number(reloadCount) + 1;
-      sessionStorage.setItem('reloadCount', reloadCount);
-      if (reloadCount < 3) { // First load + two reloads = 3 total visits
-        location.reload();
+    window.onload = function () {
+      if (!sessionStorage.getItem('reloaded')) {
+        setTimeout(() => {
+          sessionStorage.setItem('reloaded', 'true');
+          location.reload();
+        }, 5000); 
       }
     };
   </script>
